tests/ui/use/use-crate-self.stderr
error: imports need to be explicitly named
  --> $DIR/use-crate-self.rs:1:13
   |
LL | use crate::{self};
   |             ^^^^
   |
help: try renaming it with a name
   |
LL | use crate::{self as name};
   |                  +++++++

error: aborting due to 1 previous error

