tests/ui/use/use-crate-self.rs
use crate::{self};
        //~^ ERROR crate root imports need to be explicitly named: `use crate as name;`

fn main() {}
